Add style.css and add css styles to all pages.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
        
-        <ul>
+        <ul class="square">
+            <div class="recipeName">
             <li><a href="./recipes/lasagne.html">Lasagne</a></li>
             <li><a href="./recipes/scones.html">Scones</a></li>
             <li><a href="./recipes/lemonade.html">Lemonade</a></li>
+            </div>
         </ul>
         
     </body>
