--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Lasgane Recipe</title>
     </head>
     <body>
         <h1>Lasagne</h1>
-        <img src="../images/lasagne.jpg" height="300" width="350" alt="Lasagne image">
+        <img src="../images/lasagne.jpg" class="main" alt="Lasagne image">
         <h4>Description</h4>
         <p>With layer upon layer of rich tomatoey beef mince, pasta, and creamy cheesy sauce, it’s hard to find anything to dislike about lasagne. There are numerous reasons why this particular lasagne recipe has become so beloved. The addition of wine in the red sauce makes it super flavourful, while the layering of pasta with mozzarella makes for the perfect cheese pull. But if we were to pick one thing that makes this lasagne recipe stand out above all others, it’s the luscious bechamel sauce. A good home-made bechamel base takes time - but it’s worth it for the extra depth of flavour you won’t find with many lasagnes.</p>
         <h4>Ingredients</h4>
-        <ul>
+        <ul class="square">
             <li>2 tsp olive oil</li>
             <li>1 brown onion</li>
             <li>2 cloves garlic, crushed</li>
