--- a/recipes/lemonade.html
+++ b/recipes/lemonade.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Lemonade</title>
     </head>
     <body>
         <h1>Lemonade</h1>
-        <img src="../images/lemonade.jpeg" height="300" width="350" alt="Lemonade image">
+        <img src="../images/lemonade.jpeg" class="main" alt="Lemonade image">
         <p>Got lemons? You know what they say...this sweet lemonade is just whats needed to quench summer thirsts.</p>
         <h4>Ingredients</h4>
-        <ul>
+        <ul class="square">
             <li>5 cups caster sugar</li>
             <li>1.25 litres lemon juice (3kg lemons)</li>
             <li>2 litres cold water</li>
