--- a/recipes/scones.html
+++ b/recipes/scones.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Scones</title>
     </head>
     <body>
         <h1>Scones</h1>
-        <img src="../images/scones.jpg" height="300" width="350" alt="Scones image">
+        <img src="../images/scones.jpg" class="main" alt="Scones image">
         <p>Everyone’s got their own go-to scone recipe. Whether it’s one passed down through generations in a hand-written book, or one you’ve bookmarked and used for years, we all seem to have an opinion on what makes a great scone.</p>
         <h4>Ingredients</h4>
         <ul>
-            <li>500g self raising flour</li>
+            <li class="square">500g self raising flour</li>
             <li>250ml chilled lemonade</li>
             <li>300ml thickened cream</li>
         </ul>
